@@ -1,3 +1,7 @@
+2020-06-14  fedora Cloud User  <fedora@ip-172-30-4-244.ec2.internal>
+
+	* src/threadpool.cpp: numCPU() now simply calls std::thread::hardware_concurrency(). Perhaps more should be replaced over time, but it would be super-exciting to see the threadpool be able to spin of threads onto other servers, which was the original intent. 
+
 2020-06-13  Simson Garfinkel <simsong@acm.org>
 	* updated license to MIT License, copyright Simson L. Garfinkel, consistent with the fact that this is no longer an official US Government work product.
 
